--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -11,4 +11,12 @@
     <string name="email_cant_empty">Email cannot be empty</string>
     <string name="email_format_error">Incorrect email format</string>
     <string name="password_cant_empty">Password cannot be empty</string>
+    <string name="tombol_menu">menu button</string>
+    <string name="greeting_morning">Good Morning</string>
+    <string name="greeting_afternoonA">Good Afternoon</string>
+    <string name="greeting_afternoonB">Good Afternoon</string>
+    <string name="greeting_evening">Good Evening</string>
+    <string name="logout">Logout</string>
+    <string name="about_app">App Info</string>
+    <string name="setting">Setting</string>
 </resources>
