--- a/erp/src/main/res/values/strings.xml
+++ b/erp/src/main/res/values/strings.xml
@@ -24,5 +24,9 @@
     <string name="about_app">Tentang Aplikasi</string>
     <string name="logout">Keluar</string>
     <string name="setting">Pengaturan</string>
+    <string name="login_webapp">Masuk Web App</string>
+    <string name="qrcode_not_match">QR Code tidak cocok</string>
+    <string name="open_source" translatable="false">Open Source</string>
+    <string name="menu_not_avail">Menu belum tersedia</string>
 
 </resources>
