--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -28,4 +28,17 @@
     <string name="logout_success">Logout Successfully</string>
     <string name="icon_empty">empty data icon</string>
     <string name="button_dropdown">dropdown button</string>
+    <string name="admin_edit">Edit Profile</string>
+    <string name="icon_admin_change_pass">icon change password</string>
+    <string name="icon_admin_edit">icon edit profile</string>
+    <string name="admin_change_pass">Change Password</string>
+    <string name="icon_admin_reset_login">icon reset login</string>
+    <string name="admin_reset_login">Reset Login</string>
+    <string name="icon_admin_delete">icon delete admin</string>
+    <string name="admin_delete">Delete Profile</string>
+    <string name="pass_not_validated_desc">Passwords must be at least 8 characters long, and must include at least one uppercase letter, one lowercase letter, one digit number, and no spaces.</string>
+    <string name="btn_save">Save</string>
+    <string name="password_again">Enter Password Again</string>
+    <string name="pass_not_match">Password are not same</string>
+    <string name="change_pass_name">Admin Name : %1$s</string>
 </resources>
