--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -48,4 +48,5 @@
     <string name="admin_address">Address</string>
     <string name="admin_phone">Phone Number</string>
     <string name="current_level">current level : %1$s</string>
+    <string name="success_update_profile">Successfully updated profile</string>
 </resources>
