--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -64,4 +64,11 @@
     <string name="please_wait">Please wait</string>
     <string name="login_webapp_success">Login successful</string>
     <string name="add_new_level">Add new level</string>
+    <string name="icon_edit_level_name">level name edit button icon</string>
+    <string name="level_name_edit">Edit Level Name</string>
+    <string name="icon_level_edit_access">access rights edit button icon</string>
+    <string name="level_edit_access">Edit Access Rights</string>
+    <string name="icon_level_delete">level delete button icon</string>
+    <string name="level_delete">Delete Level</string>
+    <string name="level_name">Level Name</string>
 </resources>
