--- a/erp/src/main/res/values/strings.xml
+++ b/erp/src/main/res/values/strings.xml
@@ -81,5 +81,7 @@
     <string name="icon_level_delete">ikon tombol hapus level</string>
     <string name="level_delete">Hapus Level</string>
     <string name="level_name">Nama Level</string>
+    <string name="confirm_delete_level_title">Konfirmasi Hapus Level</string>
+    <string name="confirm_delete_level_desc">Apakah Anda yakin ingin menghapus level %1$s</string>
 
 </resources>
