--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -73,4 +73,5 @@
     <string name="level_name">Level Name</string>
     <string name="confirm_delete_level_title">Confirm Delete Level</string>
     <string name="confirm_delete_level_desc">Are you sure you want to delete the %1$s level?</string>
+    <string name="customer">Customer</string>
 </resources>
