finish level features

--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -74,4 +74,13 @@
     <string name="confirm_delete_level_title">Confirm Delete Level</string>
     <string name="confirm_delete_level_desc">Are you sure you want to delete the %1$s level?</string>
     <string name="customer">Customer</string>
+    <string name="level_show_access">View Access Rights</string>
+    <string name="view_access_level">Access Rights Level %1$s</string>
+    <string name="view_access_modul">Modul</string>
+    <string name="view_access_insert">Insert</string>
+    <string name="view_access_update">Update</string>
+    <string name="issread">issread</string>
+    <string name="isinsert">isinsert</string>
+    <string name="isupdate">isupdate</string>
+    <string name="isdelete">isdelete</string>
 </resources>
