feat: get list goods

--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -101,4 +101,5 @@
     <string name="product_composition">Product composition</string>
     <string name="product_goods">Goods</string>
     <string name="product_requirement">Needs</string>
+    <string name="shipment">Shipment</string>
 </resources>
