--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -86,15 +86,12 @@
     <string name="view_access_read">Read</string>
     <string name="view_access_delete">Delete</string>
     <string name="admin_department">Department : %1$s</string>
-    <string name="customer_additional_holder">- %1$s : %2$s</string>
     <string name="additional_information">Additional information</string>
     <string name="customer_address">Address : %1$s</string>
     <string name="customer_phone">Phone : %1$s</string>
     <string name="supplier_type">Type : %1$s</string>
     <string name="supplier">Supplier</string>
-    <string name="product_name_category">%1$s (%2$s)</string>
     <string name="product">Product</string>
-    <string name="product_price">Rp %1$s</string>
     <string name="product_specification">Product specification</string>
     <string name="specification_name">Name</string>
     <string name="specification_value">Value</string>
@@ -103,6 +100,7 @@
     <string name="product_requirement">Needs</string>
     <string name="shipment">Shipment</string>
     <string name="goods">Goods</string>
-    <string name="inquiries_nama_kode_process">%1$s (%2$s : %3$s)</string>
     <string name="inquiries_process">Process Inquiries</string>
+    <string name="ikon_tombol_detail">detail button icon</string>
+    <string name="inquiries">Inquiries</string>
 </resources>
