--- a/erp/src/main/res/values-en/strings.xml
+++ b/erp/src/main/res/values-en/strings.xml
@@ -123,4 +123,10 @@
     <string name="breakdown_work_order">Breakdown Work Order</string>
     <string name="app_logo">app logo</string>
     <string name="purchasing_estimated_delivery">Estimated delivery : %1$s</string>
+    <string name="design_packing_composition">Composition</string>
+    <string name="design_packing_used_for">Used for product</string>
+    <string name="need_goods">Need goods</string>
+    <string name="needs">Needs</string>
+    <string name="design_packing">Design Packaging</string>
+    <string name="load">Load</string>
 </resources>
